# rusty-studio

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
crates/rusty-studio-cli/: Cargo.toml
crates/rusty-studio-cli/src/: args.rs  graph_edit_commands.rs  hostess_commands.rs  main.rs  project_commands.rs  projected_motion_breath_commands.rs  release_candidate_commands.rs  shell_generation_commands.rs  shell_handoff_acceptance_commands.rs  shell_package_commands.rs
crates/rusty-studio-core/: Cargo.toml
crates/rusty-studio-core/src/: error.rs  graph_edit.rs  id_grammar.rs  io.rs  lib.rs  model_prelude.rs  project_references.rs  projected_motion_breath.rs  shell_artifacts.rs  shell_contract.rs  shell_descriptor.rs  shell_export_package.rs  shell_export_package_comparison.rs  shell_handoff.rs  shell_handoff_acceptance.rs  shell_handoff_acceptance_comparison.rs  shell_hostess_handoff.rs  shell_hostess_staging_acceptance.rs  shell_hostess_staging_acceptance_comparison.rs  shell_hostess_staging_acceptance_items.rs  shell_hostess_staging_execution.rs  shell_hostess_staging_handoff.rs  shell_hostess_staging_plan.rs  shell_hostess_staging_preview.rs  shell_release_candidate.rs  shell_runbook.rs  shell_shared.rs  shell_templates.rs  tests.rs  validation_helpers.rs  view_model.rs
crates/rusty-studio-core/src/graph_edit/: bindings.rs
crates/rusty-studio-core/src/tests/: graph_edit_tests.rs  projected_motion_breath_tests.rs  shell_contract_tests.rs  shell_export_package_tests.rs  shell_handoff_acceptance_tests.rs  shell_handoff_tests.rs  shell_hostess_workflow_tests.rs  shell_release_candidate_tests.rs  view_model_tests.rs
crates/rusty-studio-desktop-shell/: Cargo.toml
crates/rusty-studio-desktop-shell/src/: main.rs
crates/rusty-studio-makepad/: Cargo.toml
crates/rusty-studio-makepad/src/: app_events.rs  canvas.rs  main.rs  paths.rs  project_actions.rs  script_ui.rs  selection.rs  shell_workflows.rs  status_text.rs  tests.rs
crates/rusty-studio-model/: Cargo.toml
docs/: LICENSING.md
examples/: synthetic-studio-project.json
tools/: check_all.ps1
tools/checks/: studio_hostess_staging_check.ps1  studio_shell_export_package_check.ps1
(+323 files in other folders)
