[workspace]
members = [
    "crates/rusty-studio-model",
    "crates/rusty-studio-core",
    "crates/rusty-studio-cli",
    "crates/rusty-studio-makepad",
    "crates/rusty-studio-desktop-shell",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
version = "0.1.0"
publish = false

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
