[package]
name = "rusty-studio-core"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
rusty-studio-model = { path = "../rusty-studio-model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
